Fixed word wrap and made strings containing only spaces illigal

--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -66,7 +66,7 @@ p {
 }
 
 .bubble {
-  min-width: 1%;
+  min-width: 14px;
 	min-height: 14px;
 	max-width: 80%;
 	margin-left: 10px;
@@ -74,7 +74,7 @@ p {
 	padding: 5px;
 	background-color: pink;
 	border-radius: 6px;
-	word-break: normal;
+	overflow-wrap: break-word;
 }
 
 .stranger {
